# MiniProject3

I2PII_MiniProject_3-template/: .gitignore  109062335_projet3  CMakeLists.txt  gamelog.txt  main  main.cpp  makefile  player  player.cpp  player_bd  runall.ps1
I2PII_MiniProject_3-template/src/: LOG.h
